...
            "state" : "translated",
            "value" : "添加标签"
          }
        }
      }
    },
    "Add New Project" : {
      "comment" : "Button title.",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "正确标签"
          }
        }
      }
    },
    "Create Project" : {
      "comment" : "Button title.",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "数据"
          }
        }
      }
    },
    "Delete" : {
      "comment" : "Button title.\nMenu item.",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "needs_review",
            "value" : "删除“%@”后，与这个标签关联的所有图像也将被一并删除。这项操作无法撤销。"
          }
        }
      }
    },
    "Delete Projects" : {
      "comment" : "Button title.",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
